--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div>
+        <div class="d-grid gap-2">
+            <a type="button" class="btn btn-primary" type="button" href="/agregar">Nueva publicación</a>
+        </div>
         <table class="table">
             <thead>
             <tr>
