--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-    <div>
+    <div style="padding: 50px;">
         <div class="d-grid gap-2">
             <a type="button" class="btn btn-primary" type="button" href="/agregar">Nueva publicación</a>
         </div>
