--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foro</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <div style="padding: 50px;">
         <div class="d-grid gap-2">
             <a type="button" class="btn btn-primary" type="button" href="/agregar">Nueva publicación</a>
         </div>
+        <br />
         <table class="table">
             <thead>
             <tr>
@@ -28,17 +30,11 @@
                         <th scope="row"><%= item.id %></th>
                         <td><%= item.titulo %></td>
                         <td><%= item.descripcion %></td>
-                        <td><%= item.imagen %></td>
+                        <td><img src="<%= item.imagen %>" alt="imagen descriptiva"/></td>
                         <td><%= item.fecha %></td>
                         <td>
-                            <a type="button" class="btn btn-primary" href="/editar/<%= item.id %>">
-                                Editar
-                            </a>
-                        </td>
-                        <td>
-                            <a type="button" class="btn btn-danger" href="/eliminar/<%= item.id %>">
-                                Eliminar
-                            </a>
+                            <a type="button" class="btn btn-primary" href="/editar/<%= item.id %>">Editar</a>
+                            <a type="button" class="btn btn-danger" href="/eliminar/<%= item.id %>">Eliminar</a>
                         </td>
                     </tr>
                 <% }) %>
